--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-$env:DATABASE_URL = "file:./dev.db"
-$env:DRIZZLE_DATABASE_URL = "file:./dev.db"
+DATABASE_URL="file:./dev.db"
+DRIZZLE_DATABASE_URL="file:./dev.db"
